commit on mastert

--- a/index.html
+++ b/index.html
@@ -6,8 +6,29 @@
     <title>Valley Restaurant & Bar</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <section class="section-1">
+        <div class="section-1__container">
+            <h1 class="section-1__header">Valley Restaurant <br><span class="header-span">&</span><br>Bar</h1>
+            <p class="header__sub-text">Coming to you in September, 2021.</p>
+            <div class="icons">
+                <img src="images/hero-images/pizza.png" alt="Image of pizza" class="icon change">
+                <img src="images/hero-images/burrito.png" alt="Image of burrito" class="icon">
+                <img src="images/hero-images/chicken.png" alt="Image of chicken" class="icon">
+                <img src="images/hero-images/dessert.png" alt="Image of dessert" class="icon">
+                <img src="images/hero-images/noodle.png" alt="Image of noodles" class="icon">
+                <img src="images/hero-images/soup.png" alt="Image of soup" class="icon">
+                <img src="images/hero-images/sushi.png" alt="Image of sushi" class="icon">
+                <img src="images/hero-images/wine.png" alt="Image of wine" class="icon">
+            </div>
+        </div>
+    </section>
+
+    
 
         <script src="script.js"></script>
 </body>
