new commit on 'master'

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <h1 class="section-1__header">Valley Restaurant <br><span class="header-span">&</span><br>Bar</h1>
             <p class="header__sub-text">Coming to you in September, 2021.</p>
             <div class="icons">
-                <img src="images/hero-images/pizza.png" alt="Image of pizza" class="icon change">
-                <img src="images/hero-images/burrito.png" alt="Image of burrito" class="icon">
-                <img src="images/hero-images/chicken.png" alt="Image of chicken" class="icon">
-                <img src="images/hero-images/dessert.png" alt="Image of dessert" class="icon">
-                <img src="images/hero-images/noodle.png" alt="Image of noodles" class="icon">
-                <img src="images/hero-images/soup.png" alt="Image of soup" class="icon">
-                <img src="images/hero-images/sushi.png" alt="Image of sushi" class="icon">
-                <img src="images/hero-images/wine.png" alt="Image of wine" class="icon">
+                <img src="images/hero-images/pizza.png" alt="gallery-image of pizza" class="icon change">
+                <img src="images/hero-images/burrito.png" alt="gallery-image of burrito" class="icon">
+                <img src="images/hero-images/chicken.png" alt="gallery-image of chicken" class="icon">
+                <img src="images/hero-images/dessert.png" alt="gallery-image of dessert" class="icon">
+                <img src="images/hero-images/noodle.png" alt="gallery-image of noodles" class="icon">
+                <img src="images/hero-images/soup.png" alt="gallery-image of soup" class="icon">
+                <img src="images/hero-images/sushi.png" alt="gallery-image of sushi" class="icon">
+                <img src="images/hero-images/wine.png" alt="gallery-image of wine" class="icon">
             </div>
         </div>
     </section>
@@ -134,6 +134,44 @@
  </section>
 
 <!-- End of Section 2 -->
+
+<!-- Section 3-->
+<section class="section-3">
+    <h1 class="section-3__heading">gallery</h1>
+    <div class="gallery">
+        <a href="#" class="gallery-link" title="Food Info">
+            <img src="images/gallery-images/gallery-img-1.jpg" class="food-img">
+            <h3 class="food-name">Pizza</h3>
+            <p class="food-description">A baked dish originating in Italy, which consists of a flat, round, crispy leavened dough covered with a layer of sauce and a layer of one or more toppings, such as meat, seafood, vegetables, and fruit, which is often topped with a layer of cheese</p>
+        </a>
+        <a href="#" class="gallery-link" title="Food Info">
+            <img src="images/gallery-images/gallery-img-2.jpg" class="food-img">
+            <h3 class="food-name">Cheese Steak</h3>
+            <p class="food-description">Our unique Valley Cheesesteak is a sandwich made with super thinly sliced ribeye steak, caramelized onion, and provolone cheese. That simple combination is the original classic as made popular on the East Coast</p>
+        </a>
+        <a href="#" class="gallery-link" title="Food Info">
+            <img src="images/gallery-images/gallery-img-3.jpg" class="food-img">
+            <h3 class="food-name">Cheeseburger</h3>
+            <p class="food-description">Two classic cheeseburgers with red onion and pickles on sesame buns on a wooden serving board</p>
+        </a>
+        <a href="#" class="gallery-link" title="Food Info">
+            <img src="images/gallery-images/gallery-img-4.jpg" class="food-img">
+            <h3 class="food-name">Seafood Medley</h3>
+            <p class="food-description">A colorful rice dish bursting with clams, mussels and shrimp</p>
+        </a>
+        <a href="#" class="gallery-link" title="Food Info">
+            <img src="images/gallery-images/gallery-img-5.jpg" class="food-img">
+            <h3 class="food-name">Caesar Salad</h3>
+            <p class="food-description">A green salad of romaine lettuce and croutons dressed with lemon juice (or lime juice), olive oil, egg, Worcestershire sauce, anchovies, garlic, Dijon mustard, Parmesan cheese, and black pepper</p>
+        </a>
+        <a href="#" class="gallery-link" title="Food Info">
+            <img src="images/gallery-images/gallery-img-6.jpg" class="food-img">
+            <h3 class="food-name">Cupcakes</h3>
+            <p class="food-description">This chocolate cupcake is sweet and light, but the cherry almond frosting is lick-your-lips cherrylicious.</p>
+        </a>
+    </div>
+</section>
+<!-- End of Section 3-->
 
 
         <script src="script.js"></script>
